<resources>
    <string name="app_name">Parstagram</string>
    <string name="action_logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="hint_phone_or_email">Phone number, email or username</string>
    <string name="action_sign_in">Log In</string>
    <string name="english_us">English (US)</string>
    <string name="empty"></string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">R2zGTsbi5veo9jj2zsen10KUMaYqnpb3HGNB5a9Q</string>
    <string name="back4app_client_key">PXPqoAL30K9T83mgcYsxBGMllvZ5QT2terbFV46y</string>
    <string name="prompt_description">Description</string>
    <string name="action_take_picture">TAKE PICTURE</string>
    <string name="action_submit">SUBMIT</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="or">OR</string>
    <string name="feeds">Live Feed</string>
    <string name="capture">Capture</string>
    <string name="profile">Profile</string>
    <string name="forgot"><font color='c4c4c4'>Forgot your login details? </font><b>Get help logging in.</b></string>
    <string name="sign_up"><font color='c4c4c4'>Dont have an account? </font><b>Sign up.</b></string>
    <string name="title_activity_list">Live Feed</string>
    <string name="compose">Compose</string>
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>